Correctly align banner with or without app.css

--- a/inst/apps/trialdataxplor/www/css/custom_styles.css
+++ b/inst/apps/trialdataxplor/www/css/custom_styles.css
@@ -16,3 +16,7 @@
     border-radius: 0;
   }
 }
+
+.container-fluid {
+  padding-left: 3px;
+}
